description: "A syntax extension for importing declarations from interface files"
synopsis: "A syntax extension for importing declarations from interface files"
name: "ppx_import"
opam-version: "2.0"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
homepage: "https://github.com/ocaml-ppx/ppx_import"
doc: "https://ocaml-ppx.github.io/ppx_import/"
license: "MIT"
bug-reports: "https://github.com/ocaml-ppx/ppx_import/issues"
dev-repo: "git+https://github.com/ocaml-ppx/ppx_import.git"
tags: [ "syntax" ]

depends: [
  "ocaml"                   {              >= "4.05.0" }
  "dune"                    {              >= "1.2.0"  }
  "ppxlib"                  {              >= "0.22.0"  }
  "ounit"                   { with-test                }
  "ppx_deriving"            { with-test  & >= "4.2.1"  }
  "ppx_sexp_conv"           { with-test  & >= "v0.13.0" }
]

build:      [["dune" "build"   "-p" name "-j" jobs]
             ["dune" "runtest" "-p" name "-j" jobs] { with-test }
            ]
